--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,9 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
+                <configuration>
+                    <useFile>false</useFile>
+                </configuration>
             </plugin>
         </plugins>
     </build>
